spec/fail/assign_to_undefined.ulg
foo = 123 # !> Can't assign to 'foo'